--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     
-    <script src="./first.js"></script>
+    <!-- <script src="./ejercicio.js"></script> -->
+     <script src="./ejercicio2.js"></script>
 </body>
 </html>
