--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     
     <!-- <script src="./ejercicio.js"></script> -->
-     <script src="./ejercicio2.js"></script>
-</body>
+    <!-- <script src="./ejercicio2.js"></script> -->
+    <script src="./ejercicio3.js"></script>
+    </body>
 </html>
