--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <!-- <script src="./ejercicio.js"></script> -->
     <!-- <script src="./ejercicio2.js"></script> -->
     <!-- <script src="./ejercicio3.js"></script> -->
-     <!-- <script src="./ejercicio4.js"></script> -->
-      <script src="./ejercicio5.js"></script>
-    </body>
+    <!-- <script src="./ejercicio4.js"></script> -->
+    <!-- <script src="./ejercicio5.js"></script> -->
+    <script src="./ejercicio6.js"></script>
+
+  </body>
 </html>
